test/errors/type/collections/set/__bxor3.yasl
echo collections.set().__bxor(1, true)
